--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ h3{
 }
 .buttons>button{
   color: rgb(255, 255, 255);
+  font-family: cursive;
   cursor: pointer;
   font-size: 20px;
   font-weight: bold;
@@ -103,4 +104,70 @@ h3{
   transition: all 0.5s ease 0s;
   transform: scale(1.2,1.2);
   opacity: 0.7;
+}
+.modal-container{
+  display: inline-block;
+  height: 98vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color:rgba(46, 67, 67, 0.6);
+}
+.modal{
+  position: absolute;
+  top: 20%;
+  left: 35%;
+  display: flex;
+  height: 300px;
+  width: 400px;
+  background-color: rgb(61, 129, 254);
+  color: white;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 20px;
+}
+.modal textarea{
+  outline: 1px blue;
+  border: none;
+  border-radius: 2px;
+  font-size: 18px;
+  box-shadow: 0 0 10px black;
+}
+.modal-buttons{
+  display: flex;
+  gap: 20px;
+}
+.modal-buttons>button{
+  padding: 10px 20px;
+  font-weight: bold;
+  font-family: cursive;
+  font-size: 19px;
+  background-color: blue;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  box-shadow: 0 0 10px rgb(255, 255, 255);
+  border-radius: 10px;
+}
+.modal-buttons>button:nth-child(2){
+  background-color: rgb(50, 48, 48);
+}
+.modal-buttons>button:hover{
+  transition: all 0.5s ease 0s;
+  transform: scale(1.2,1.2);
+  opacity: 0.7;
+}
+.cross{
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+.cross:hover{
+  transform: perspective(200px) translateZ(40px);
+  color: rgb(0, 0, 0);
 }
